<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_baseline_add_circle_24"
            android:title="@string/nav_create" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_statistic"
            android:title="@string/nav_statistic" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/nav_profile" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_signout"
                android:title="@string/nav_logout" />

        </menu>
    </item>
</menu>